--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    tools:context=".DetailFragment"
+    >
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -35,7 +38,7 @@
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="fill_parent"
                 android:background="#80000000"
                 app:layout_collapseMode="parallax"/>
 
@@ -71,41 +74,72 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:orientation="horizontal"
+                    android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <FrameLayout
-                        android:orientation="vertical"
-                        android:layout_width="0dp"
-                        android:layout_weight="1"
-                        android:layout_height="match_parent">
-
-                        <TextView
-                            android:id="@+id/detail_year"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="@android:color/black"
-                            android:layout_gravity="center"
-                            android:textSize="48sp"/>
-
-                    </FrameLayout>
-
                     <LinearLayout
-                        android:orientation="vertical"
-                        android:layout_width="0dp"
-                        android:layout_weight="1"
-                        android:layout_height="match_parent">
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
-                        <com.engtoolsdev.popmov.views.RatingView
-                            android:id="@+id/detail_rating"
-                            android:layout_width="100dp"
-                            android:layout_height="100dp"
-                            android:layout_gravity="center"
-                            app:textSize="44sp"
-                            app:textColor="@android:color/black"/>
+                        <FrameLayout
+                            android:orientation="vertical"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="match_parent">
+
+                            <TextView
+                                android:id="@+id/detail_year"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@android:color/black"
+                                android:layout_gravity="center"
+                                android:textSize="48sp"/>
+
+                        </FrameLayout>
+
+                        <LinearLayout
+                            android:orientation="vertical"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="match_parent">
+
+                            <com.engtoolsdev.popmov.views.RatingView
+                                android:id="@+id/detail_rating"
+                                android:layout_width="100dp"
+                                android:layout_height="100dp"
+                                android:layout_gravity="center"
+                                app:textSize="44sp"
+                                app:textColor="@android:color/black"/>
+
+                        </LinearLayout>
 
                     </LinearLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginTop="@dimen/activity_vertical_margin"
+                        android:layout_marginBottom="@dimen/activity_vertical_margin"
+                        android:background="@color/divider"/>
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:id="@+id/detail_review"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/reviews"
+                            android:drawableRight="@drawable/ic_arrow_right"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                            android:layout_gravity="center"/>
+
+                    </LinearLayout>
+
 
                 </LinearLayout>
 
@@ -136,96 +170,161 @@
                         android:id="@+id/overview_textview"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:fontFamily="sans-serif-light"
+                        android:textColor="@color/secondary_text"
                         android:textAppearance="?android:attr/textAppearanceMedium"/>
 
                 </LinearLayout>
 
             </android.support.v7.widget.CardView>
 
-            <android.support.v7.widget.CardView
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/trailers"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                android:layout_marginRight="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginBottom="16dp"/>
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/trailer_card_1"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginBottom="16dp"
-                app:contentPadding="16dp"
                 android:orientation="vertical">
 
-                <LinearLayout
+                <RelativeLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="match_parent">
 
-                    <TextView
+
+                    <ImageView
+                        android:id="@+id/trailer_card_imageview_1"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/trailer"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+                        android:scaleType="centerCrop"
+                        android:layout_height="match_parent"
+                        android:contentDescription="@string/trailer_thumbnail_content_desc"/>
 
-                    <TextView
+                    <View
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceMedium"/>
+                        android:layout_height="match_parent"
+                        android:background="@color/black_dim"/>
 
-                </LinearLayout>
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/ic_av_play_circle_fill"/>
+
+
+                    <ImageView
+                        android:id="@+id/trailer_card_share_1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/abc_ic_menu_share_mtrl_alpha"
+                        android:contentDescription="@string/share"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_margin="8dp"/>
+
+                </RelativeLayout>
 
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
+                android:id="@+id/trailer_card_2"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="200dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginBottom="16dp"
-                app:contentPadding="16dp"
                 android:orientation="vertical">
 
-                <LinearLayout
-                    android:orientation="vertical"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="match_parent">
 
-                    <TextView
+
+                    <ImageView
+                        android:id="@+id/trailer_card_imageview_2"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/trailer"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        android:contentDescription="@string/trailer_thumbnail_content_desc"/>
 
-                    <TextView
+                    <View
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceMedium"/>
+                        android:layout_height="match_parent"
+                        android:background="@color/black_dim"/>
 
-                </LinearLayout>
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/ic_av_play_circle_fill"/>
+
+
+                    <ImageView
+                        android:id="@+id/trailer_card_share_2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/abc_ic_menu_share_mtrl_alpha"
+                        android:contentDescription="@string/share"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_margin="8dp"/>
+
+
+                </RelativeLayout>
 
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
+                android:id="@+id/trailer_card_3"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="200dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginBottom="16dp"
-                app:contentPadding="16dp"
                 android:orientation="vertical">
 
-                <LinearLayout
-                    android:orientation="vertical"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="match_parent">
 
-                    <TextView
+                    <ImageView
+                        android:id="@+id/trailer_card_imageview_3"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/trailer"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        android:contentDescription="@string/trailer_thumbnail_content_desc" />
 
-                    <TextView
+                    <View
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceMedium"/>
+                        android:layout_height="match_parent"
+                        android:background="@color/black_dim"/>
 
-                </LinearLayout>
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/ic_av_play_circle_fill"/>
+
+                    <ImageView
+                        android:id="@+id/trailer_card_share_3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/abc_ic_menu_share_mtrl_alpha"
+                        android:contentDescription="@string/share"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_margin="8dp"/>
+
+                </RelativeLayout>
 
             </android.support.v7.widget.CardView>
 
