--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
 
     <dimen name="detail_cover_height">456dp</dimen>
     <dimen name="default_arc_width">2dp</dimen>
+
+    <dimen name="grid_item_height">250dp</dimen>
 </resources>
