--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
         <item name="android:textColorPrimary">@color/primary_text</item>
+        <item name="colorSwitchThumbNormal">@color/divider</item>
     </style>
 
     <style name="Theme.PopMov.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
@@ -13,6 +14,13 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
         <item name="android:textColorPrimary">@color/primary_text</item>
+        <item name="colorSwitchThumbNormal">@color/divider</item>
+    </style>
+
+    <style name="PopMov.Toolbar" parent="ThemeOverlay.AppCompat.ActionBar">
+        <item name="colorPrimary">@android:color/white</item>
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:background">@color/primary</item>
     </style>
 
 </resources>
